<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visualization.VisualizationActivity">

    <RadioGroup
        android:id="@+id/checkBoxGroup"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/big_padding"
        android:layout_marginTop="@dimen/reg_padding"
        android:layout_marginStart="@dimen/reg_padding"
        android:layout_marginEnd="@dimen/reg_padding"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/rawDataCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/reg_padding"
            android:layout_marginEnd="@dimen/reg_padding"
            android:fontFamily="@string/basic_font"
            android:text="@string/raw_data_checkbox" />

        <CheckBox
            android:id="@+id/filteredDataCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/reg_padding"
            android:layout_marginEnd="@dimen/reg_padding"
            android:fontFamily="@string/basic_font"
            android:text="@string/filtered_data_checkbox" />
    </RadioGroup>

    <Button
        android:id="@+id/minimize_button"
        android:layout_width="@dimen/big_padding"
        android:layout_height="@dimen/big_padding"
        android:layout_marginTop="@dimen/reg_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/reg_padding"
        android:background="@drawable/ic_baseline_close_fullscreen_24_dark"
        android:contentDescription="@string/minimize_fullscreen_description" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/visualizationChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/reg_padding"
        android:layout_marginEnd="@dimen/reg_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGroup"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>